modif couleur supression div ajout de balise p

--- a/cv.html
+++ b/cv.html
@@ -11,22 +11,22 @@
     </div>
     <div class="div1">
       <div>Bonjour je suis axel j'ai 22 ans est j'apprends a coder des page internet</div>
-      <br>
       <div>Numéro:</div>
       <br/>
       <div> 06.99.84.63.34 </div>
-      <br/>
-      <div>E-mail: </div>
+      <p>E-mail: </p>
       axel.capron@hotmail.fr
-      <br />axel.59590@hotmail.fr
+      <p>axel.59590@hotmail.fr</p>
     </div>
   </div>
   <div class="droite" >
-    <h1>Diplome obtenus</h1>
+    <h1>Diplome Obtenus</h1>
     <div>2008~2012 </div>
-    <div> B.E.P vente action marchande</div>
-    <div>2010~2012</div>
-    <div>Bac pro commerce</div>
-  </div>
-</body>
-</html>
+    <p>Lycées Charle Deulin<p>
+    <p> B.E.P Vente Action Marchande</p>
+    <p>2010~2012</p>
+    <p>Lycées Pays de Condées<p>
+      <div>Bac Pro Commerce</div>
+    </div>
+  </body>
+  </html>
