--- a/cv.html
+++ b/cv.html
@@ -23,10 +23,12 @@
     <h1>Diplome Obtenus</h1>
     <div>2008~2012 </div>
     <p>Lycées Charle Deulin<p>
-    <p> B.E.P Vente Action Marchande</p>
-    <p>2010~2012</p>
-    <p>Lycées Pays de Condées<p>
-      <div>Bac Pro Commerce</div>
-    </div>
-  </body>
-  </html>
+      <p> B.E.P Vente Action Marchande</p>
+      <p>2010~2012</p>
+      <p>Lycées Pays de Condées<p>
+        <div>Bac Pro Commerce</div>
+      </div>
+      <div class="droite2">
+        <h1>Experience Entreprise <h1>
+        </body>
+        </html>
