--- a/cv.html
+++ b/cv.html
@@ -29,6 +29,10 @@
         <div>Bac Pro Commerce</div>
       </div>
       <div class="droite2">
-        <h1>Experience Entreprise <h1>
-        </body>
-        </html>
+        <h1>Experience Entreprise </h1>
+        <p>2012~2013</p>
+        <P>Auchan Petite Foret</p>
+          <p>Vendeur Patisserie</p>
+          <p>
+          </body>
+          </html>
