modif integration menu

--- a/cv.html
+++ b/cv.html
@@ -9,30 +9,30 @@
     <div class="image">
       <img src="axel.jpg">
     </div>
-    <div class="div1">
-      <div>Bonjour je suis axel j'ai 22 ans est j'apprends a coder des page internet</div>
-      <div>Numéro:</div>
-      <br/>
-      <div> 06.99.84.63.34 </div>
-      <p>E-mail: </p>
-      axel.capron@hotmail.fr
-      <p>axel.59590@hotmail.fr</p>
+    <ul id="menu-accordeon">
+      <li><a href="#">Coordonées</a>
+        <ul>
+          <li><a href="#">E-mail</a></li>
+          <li><a href="#">Numéros</a></li>
+          <li><a href="#">Reseaux</a></li>
+          <li><a href="#"></a></li>
+        </ul>
+      </li>
     </div>
-  </div>
-  <div class="droite" >
-    <h1>Diplome Obtenus</h1>
-    <div>2008~2012 </div>
-    <p>Lycées Charle Deulin<p>
-      <p> B.E.P Vente Action Marchande</p>
-      <p>2010~2012</p>
-      <p>Lycées Pays de Condées<p>
-        <div>Bac Pro Commerce</div>
-      </div>
-      <div class="droite2">
-        <h1>Experience Entreprise </h1>
-        <p>2012~2013</p>
-        <P>Auchan Petite Foret</p>
-          <p>Vendeur Patisserie</p>
-          <p>
-          </body>
-          </html>
+    <div class="droite" >
+      <h1>Diplome Obtenus</h1>
+      <div>2008~2012 </div>
+      <p>Lycées Charle Deulin<p>
+        <p> B.E.P Vente Action Marchande</p>
+        <p>2010~2012</p>
+        <p>Lycées Pays de Condées<p>
+          <div>Bac Pro Commerce</div>
+        </div>
+        <div class="droite2">
+          <h1>Experience Entreprise </h1>
+          <p>2012~2013</p>
+          <P>Auchan Petite Foret</p>
+            <p>Vendeur Patisserie</p>
+            <p>
+            </body>
+            </html>
