--- a/cv.html
+++ b/cv.html
@@ -18,21 +18,28 @@
           <li><a href="#"></a></li>
         </ul>
       </li>
-    </div>
-    <div class="droite" >
-      <h1>Diplome Obtenus</h1>
-      <div>2008~2012 </div>
-      <p>Lycées Charle Deulin<p>
-        <p> B.E.P Vente Action Marchande</p>
-        <p>2010~2012</p>
-        <p>Lycées Pays de Condées<p>
-          <div>Bac Pro Commerce</div>
-        </div>
-        <div class="droite2">
-          <h1>Experience Entreprise </h1>
-          <p>2012~2013</p>
-          <P>Auchan Petite Foret</p>
-            <p>Vendeur Patisserie</p>
-            <p>
-            </body>
-            </html>
+      <li><a href="#">Lien menu 2</a>
+        <ul>
+          <li><a href="#">Lien sous menu 2</a></li>
+          <li><a href="#">Lien sous menu 2</a></li>
+          <li><a href="#">Lien sous menu 2</a></li>
+          <li><a href="#">Lien sous menu 2</a></li>
+        </ul>
+      </div>
+      <div class="droite" >
+        <h1>Diplome Obtenus</h1>
+        <div>2008~2012 </div>
+        <p>Lycées Charle Deulin<p>
+          <p> B.E.P Vente Action Marchande</p>
+          <p>2010~2012</p>
+          <p>Lycées Pays de Condées<p>
+            <div>Bac Pro Commerce</div>
+          </div>
+          <div class="droite2">
+            <h1>Experience Entreprise </h1>
+            <p>2012~2013</p>
+            <P>Auchan Petite Foret</p>
+              <p>Vendeur Patisserie</p>
+              <p>
+              </body>
+              </html>
