modiffication ajout de lien réseau

--- a/cv.html
+++ b/cv.html
@@ -10,20 +10,24 @@
       <img src="axel.jpg">
     </div>
     <ul id="menu-accordeon">
-      <li><a href="#">Coordonées</a>
+    </li>
+    <li><a href="#">Profils</a>
+      <ul>
+        <li><a href="#">Prenom: Axel</a></li>
+        <li><a href="#">Age: 22 Ans</a></li>
+        <li><a href="#">Résidence: Bouchain(59)</a></li>
+        <li><a href="#">Tenace,Determiner,Exigent,</a></li>
+      </ul>
+      <li><a href="#">Réseaux</a>
         <ul>
-          <li><a href="#">E-mail</a></li>
-          <li><a href="#">Numéros</a></li>
-          <li><a href="#">Reseaux</a></li>
-          <li><a href="#"></a></li>
-        </ul>
-      </li>
-      <li><a href="#">Lien menu 2</a>
-        <ul>
-          <li><a href="#">Lien sous menu 2</a></li>
-          <li><a href="#">Lien sous menu 2</a></li>
-          <li><a href="#">Lien sous menu 2</a></li>
-          <li><a href="#">Lien sous menu 2</a></li>
+          <li> <a href="https://github.com/axelcapron" target="_blank">Github</a>
+          </li>
+          <li><a href="https://www.facebook.com/axel.capron.3">Facebook</a>
+          </li>
+          <li><a href="https://plus.google.com/u/0/106893500922620249702">Google +</a>
+          </li>
+          </li>
+          <li><a href="mailto: axel.capron@outlook.fr">Email</a>
         </ul>
       </div>
       <div class="droite" >
