--- a/cv.html
+++ b/cv.html
@@ -26,8 +26,8 @@
           </li>
           <li><a href="https://plus.google.com/u/0/106893500922620249702">Google +</a>
           </li>
-          </li>
-          <li><a href="mailto: axel.capron@outlook.fr">Email</a>
+        </li>
+        <li><a href="mailto: axel.capron@outlook.fr">Email</a>
         </ul>
       </div>
       <div class="droite" >
@@ -43,7 +43,12 @@
             <h1>Experience Entreprise </h1>
             <p>2012~2013</p>
             <P>Auchan Petite Foret</p>
-              <p>Vendeur Patisserie</p>
-              <p>
-              </body>
-              </html>
+              <p>Poste occupées :Vendeur Patisserie</p>
+              <p>Prise de commande,Detection des besoin,Vente additionnels,
+                Animation produits,Fabrication
+                <p>
+                  <p>2013~2015</p>
+                  <p>Dépaneur en micro-informatique</p>
+                  <p>Détection de panne ,Changement composant,Réglage est installations </p>
+                </body>
+                </html>
