--- a/cv.html
+++ b/cv.html
@@ -29,14 +29,24 @@
         </li>
         <li><a href="mailto: axel.capron@outlook.fr">Email</a>
         </ul>
-      </div>
-      <div class="droite" >
-        <h1>Diplome Obtenus</h1>
-        <div>2008~2012 </div>
-        <p>Lycées Charle Deulin<p>
-          <p> B.E.P Vente Action Marchande</p>
-          <p>2010~2012</p>
-          <p>Lycées Pays de Condées<p>
+        <li><a href="#">Information</a>
+          <ul>
+            <li>
+              <a href="#">
+                Je souhaiter reprendre  les étude est apprendre de nouvelle chose
+                afin d élargir mes connaissance dans les domaine informatique
+                est de la  gestion , avec a terme pour ambition de monter ma propre structure .
+                je souhaite élargir mes horizon me former
+              </a>
+            </li>
+          </div>
+          <div class="droite" >
+            <h1>Diplome Obtenus</h1>
+            <div>2008~2012 </div>
+            <p>Lycées Charle Deulin</p>
+            <p> B.E.P Vente Action Marchande</p>
+            <p>2010~2012</p>
+            <p>Lycées Pays de Condées</p>
             <div>Bac Pro Commerce</div>
           </div>
           <div class="droite2">
@@ -46,9 +56,9 @@
               <p>Poste occupées :Vendeur Patisserie</p>
               <p>Prise de commande,Detection des besoin,Vente additionnels,
                 Animation produits,Fabrication
-                <p>
-                  <p>2013~2015</p>
-                  <p>Dépaneur en micro-informatique</p>
-                  <p>Détection de panne ,Changement composant,Réglage est installations </p>
-                </body>
-                </html>
+              </p>
+              <p>2013~2015</p>
+              <p>Dépaneur en micro-informatique</p>
+              <p>Détection de panne ,Changement composant,Réglage est installations </p>
+            </body>
+            </html>
