--- a/cv.html
+++ b/cv.html
@@ -10,55 +10,54 @@
       <img src="axel.jpg">
     </div>
     <ul id="menu-accordeon">
-    </li>
-    <li><a href="#">Profils</a>
-      <ul>
-        <li><a href="#">Prenom: Axel</a></li>
-        <li><a href="#">Age: 22 Ans</a></li>
-        <li><a href="#">Résidence: Bouchain(59)</a></li>
-        <li><a href="#">Tenace,Determiner,Exigent,</a></li>
-      </ul>
-      <li><a href="#">Réseaux</a>
+      <li><a href="#">Profils</a>
         <ul>
-          <li> <a href="https://github.com/axelcapron" target="_blank">Github</a>
-          </li>
-          <li><a href="https://www.facebook.com/axel.capron.3">Facebook</a>
-          </li>
-          <li><a href="https://plus.google.com/u/0/106893500922620249702">Google +</a>
-          </li>
-        </li>
-        <li><a href="mailto: axel.capron@outlook.fr">Email</a>
+          <li><a href="#">Prenom: Axel</a></li>
+          <li><a href="#">Age: 22 Ans</a></li>
+          <li><a href="#">Résidence: Bouchain(59)</a></li>
+          <li><a href="#">Tenace,Determiner,Exigent,</a></li>
         </ul>
-        <li><a href="#">Information</a>
+        <li><a href="#">Réseaux</a>
+          <ul>
+            <li> <a href="https://github.com/axelcapron" target="_blank">Github</a>
+            </li>
+            <li><a href="https://www.facebook.com/axel.capron.3">Facebook</a>
+            </li>
+            <li><a href="https://plus.google.com/u/0/106893500922620249702">Google +</a>
+            </li>
+            <li><a href="mailto: axel.capron@outlook.fr">Email</a>
+            </li>
+          </ul>
+          <li><a href="#">Information</a></li>
           <ul>
             <li>
               <a href="#">
                 Je souhaiter reprendre  les étude est apprendre de nouvelle chose
                 afin d élargir mes connaissance dans les domaine informatique
-                est de la  gestion , avec a terme pour ambition de monter ma propre structure .
-                je souhaite élargir mes horizon me former
+                est popschool ma donner ma chance ,a l'avenir je voudrais monter ma propre boite
               </a>
             </li>
-          </div>
-          <div class="droite" >
-            <h1>Diplome Obtenus</h1>
-            <div>2008~2012 </div>
-            <p>Lycées Charle Deulin</p>
-            <p> B.E.P Vente Action Marchande</p>
-            <p>2010~2012</p>
-            <p>Lycées Pays de Condées</p>
-            <div>Bac Pro Commerce</div>
-          </div>
-          <div class="droite2">
-            <h1>Experience Entreprise </h1>
-            <p>2012~2013</p>
-            <P>Auchan Petite Foret</p>
-              <p>Poste occupées :Vendeur Patisserie</p>
-              <p>Prise de commande,Detection des besoin,Vente additionnels,
-                Animation produits,Fabrication
-              </p>
-              <p>2013~2015</p>
-              <p>Dépaneur en micro-informatique</p>
-              <p>Détection de panne ,Changement composant,Réglage est installations </p>
-            </body>
-            </html>
+          </ul>
+        </div>
+        <div class="droite" >
+          <h1>Diplome Obtenus</h1>
+          <div>2008~2012 </div>
+          <p>Lycées Charle Deulin</p>
+          <p> B.E.P Vente Action Marchande</p>
+          <p>2010~2012</p>
+          <p>Lycées Pays de Condées</p>
+          <div>Bac Pro Commerce</div>
+        </div>
+        <div class="droite2">
+          <h1>Experience Entreprise </h1>
+          <p>2012~2013</p>
+          <P>Auchan Petite Foret</p>
+            <p>Poste occupées :Vendeur Patisserie</p>
+            <p>Prise de commande,Detection des besoin,Vente additionnels,
+              Animation produits,Fabrication
+            </p>
+            <p>2013~2015</p>
+            <p>Dépaneur en micro-informatique</p>
+            <p>Détection de panne ,Changement composant,Réglage est installations </p>
+          </body>
+          </html>
